rnsc/tests/snapshots/error-parser-inner_directive-outside_class_before.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that .inner directive before .class is detected as unexpected token.
; Expected error: E-008 (unexpected token before class definition)
; The .inner directive is only valid inside a class body, not before it.

.inner Inner
    .super java/lang/Object
.inner_end

.class public MyClass
.super java/lang/Object

.class_end
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/rns_integration/error/parser/inner_directive/outside_class_before.rns:5:1 ]
   │
 5 │ .inner Inner
   │ ───┬──  
   │    ╰──── valid context for .inner directive is: 'class body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- JAVAP -----
not generated
